src/public/app/components/bottombar/bottombar.scss
@import "../../styles/theme";
@import "../../styles/link";

#wrapper {
    height: 100%;
    background: $white;
    box-sizing: border-box;
    border-top: 1px solid $grey;
}

.content {
    display: flex;
    justify-content: center;
    align-items: center;

    > * {
        margin: 0 $spacer;
    }

    a {
        @extend %link;
    }

    img {
        height: 48px;
        margin: $spacer / 2 $spacer;
    }

    .separator {
        color: $black-light;
    }
}

